--- a/environment.yml
+++ b/environment.yml
@@ -91,11 +91,14 @@ dependencies:
   - zlib=1.2.13=h4dc903c_0
   - zstd=1.5.5=hc035e20_0
   - pip:
+    - certifi==2023.7.22
+    - charset-normalizer==3.3.1
     - contourpy==1.1.1
     - cycler==0.12.1
     - filelock==3.12.4
     - fonttools==4.43.1
     - fsspec==2023.10.0
+    - idna==3.4
     - jinja2==3.1.2
     - kiwisolver==1.4.5
     - markupsafe==2.1.3
@@ -104,8 +107,11 @@ dependencies:
     - networkx==3.2
     - pyparsing==3.1.1
     - python-dateutil==2.8.2
+    - requests==2.31.0
     - six==1.16.0
     - sympy==1.12
     - torch==2.1.0
+    - torchvision==0.16.0
     - typing-extensions==4.8.0
+    - urllib3==2.0.7
 prefix: /Users/sizheliu/opt/anaconda3/envs/color
